--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+v1.0.1
+
+- Now with 100% more authentic Darwin ARM64 binaries! - Thanks to @samjarrett
+- Added MIT License
+- Various dependency bumps
+
 v1.0.0
 
 - Initial public release
